--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
     font-family: Arial, sans-serif;
-    background-color: #e0deded5;
+    background-color: #ff9292;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -8,15 +8,14 @@ body {
     margin: 0;
 }
 .login-container {
-    background-color: #ffffff;
-    padding: 100px;
-    border-radius: 5px;
-
-    width: 500px;
+    background-color: #ff9f9f;
+    padding: 70px;
+    border-radius: 8px;
+    width: 400px;
 }
 .login-container h1 {
     text-align: center;
-    margin-bottom: 70px;
+    margin-bottom: 60px;
 }
 .form-group {
     margin-bottom: 40px;
@@ -28,15 +27,41 @@ body {
 .form-group input {
     width: 100%;
     padding: 10px;
-    border: 1px solid #000000;
-    border-radius: 3px;
+    border: 4px solid #ffe1e1;
+    border-radius: 50px;
 }
 .form-group button {
     width: 100%;
     padding: 10px;
-    background-color: #000000;
-    color: #ffffff;
+    background-color: #ff9292;
+    color: #000000;
     border: none;
-    border-radius: 9px;
+    border-radius: 10px;
     cursor: pointer;
+}
+button{
+    text-transform: uppercase;
+    padding: 1rem 1.5em;
+    background: red;
+    border: none;
+    color: #ffff;
+    cursor: pointer;
+    opacity: 0.7;
+    flex: 3;
+}
+button:hover{
+    cursor: pointer;
+    opacity: 1;
+}
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: 0;
+}
+
+.container{
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
